[gd_scene load_steps=13 format=3 uid="uid://y6uj0iy65iy0"]

[ext_resource type="Script" uid="uid://d2pegjyasaisu" path="res://scripts/UI/Popups/popup_offre.gd" id="1_dhl3q"]
[ext_resource type="Texture2D" uid="uid://deaiqjs2cp7fr" path="res://assets/Pop-Up background.png" id="2_k1lvf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rwpom"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8hquf"]
bg_color = Color(0.384314, 0.129412, 0.00784314, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dhl3q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cdgjr"]
bg_color = Color(0.368627, 0.164706, 0.0901961, 1)
corner_radius_top_left = 55
corner_radius_top_right = 55
corner_radius_bottom_right = 55
corner_radius_bottom_left = 55

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mt4vk"]
bg_color = Color(0.227451, 0.0862745, 0.0470588, 1)
corner_radius_top_left = 55
corner_radius_top_right = 55
corner_radius_bottom_right = 55
corner_radius_bottom_left = 55

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dhl3q"]
bg_color = Color(0.384314, 0.129412, 0.00784314, 1)
corner_radius_top_left = 55
corner_radius_top_right = 55
corner_radius_bottom_right = 55
corner_radius_bottom_left = 55

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rwpom"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bjp8h"]
bg_color = Color(0.227451, 0.184314, 0.168627, 1)
corner_radius_top_left = 55
corner_radius_top_right = 55
corner_radius_bottom_right = 55
corner_radius_bottom_left = 55

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bwc38"]
bg_color = Color(0.117647, 0.105882, 0.101961, 1)
corner_radius_top_left = 55
corner_radius_top_right = 55
corner_radius_bottom_right = 55
corner_radius_bottom_left = 55

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k1lvf"]
bg_color = Color(0.164706, 0.141176, 0.133333, 1)
corner_radius_top_left = 55
corner_radius_top_right = 55
corner_radius_bottom_right = 55
corner_radius_bottom_left = 55

[node name="PopUpOffre" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -427.0
offset_top = -250.0
offset_right = 373.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dhl3q")

[node name="Back_ground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rwpom")

[node name="Mountain Background" type="TextureRect" parent="Back_ground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 134.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_k1lvf")

[node name="Title Label" type="Label" parent="Back_ground"]
layout_mode = 0
offset_right = 801.0
offset_bottom = 92.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_8hquf")
text = "Property Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="Back_ground"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 92.0
offset_bottom = 304.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Offre"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Button_container" type="HBoxContainer" parent="Back_ground"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -52.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 0

[node name="Accept_btn" type="Button" parent="Back_ground/Button_container"]
custom_minimum_size = Vector2(300, 48)
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_dhl3q")
theme_override_styles/hover = SubResource("StyleBoxFlat_cdgjr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mt4vk")
theme_override_styles/normal = SubResource("StyleBoxFlat_dhl3q")
text = "Accept"

[node name="Deny_btn" type="Button" parent="Back_ground/Button_container"]
custom_minimum_size = Vector2(300, 48)
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_rwpom")
theme_override_styles/hover = SubResource("StyleBoxFlat_bjp8h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bwc38")
theme_override_styles/normal = SubResource("StyleBoxFlat_k1lvf")
text = "Deny"
